k8s/two/service.yml
apiVersion: v1
kind: Service
metadata:
  name: cicd-test-two
  namespace: dev
spec:
  selector:
    app: cicd-test-two
  ports:
    - port: 80
      targetPort: 3000
